--- a/MyListApp/MyListApp.csproj
+++ b/MyListApp/MyListApp.csproj
@@ -43,18 +43,11 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Database\UserDB.cs" />
     <Compile Include="Models\SyncManager.cs" />
-    <Compile Include="Views\SettingsPage.xaml.cs">
-      <DependentUpon>SettingsPage.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="Views\SettingsPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Platform Services\" />
     <Folder Include="Database\" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Views\SettingsPage.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="SQLitePCLRaw.core">
